VAN-7791 fixed charge completion text overlap

--- a/vtr-ui/src/app/components/battery/battery-indicator/battery-indicator.component.scss
+++ b/vtr-ui/src/app/components/battery/battery-indicator/battery-indicator.component.scss
@@ -204,7 +204,7 @@ $border-color-25-100: #{rgba($go_light, 0.4)};
 
 			.base-remaining-text {
 				position: absolute;
-				font-size: 1rem;
+				font-size: $caption;
 				z-index: 5;
 				font-weight: $weight_bold;
 				width: 100%;
@@ -223,6 +223,13 @@ $border-color-25-100: #{rgba($go_light, 0.4)};
 				color: $main_dark;
 				bottom: 5%;
 				font-weight: $weight_medium;
+				font-size: 1rem;
+				@media only screen and (min-width: 1200px) and (max-width: 1280px) {
+					font-size: 0.9rem;
+				}
+				@media only screen and (max-width: 992px) {
+					font-size: 1.5rem;
+				}
 			}
 		}
 
